# ucmima

./: .gitignore  Makefile  Makefile.am  README  button.f  configure.ac  fmedian1.f  ifbutton.f  ordena1f.f  rpgbegin.f  systemfunction_.c  z_leeme.txt
docs/: Makefile  conf.py  index.rst  installation.rst  ucmima.tex  using_the_program.rst
docs/images/: ucmima_c1.tiff  ucmima_help.key
src/: Makefile.am  button.f  button.inc  dimensions.inc.in  fmean0.f  iofunctions.f  rpgband.f  rpgbegok.f  rpgenv.f  rpgerasw.f  ucmima.f
