#
bin_PROGRAMS = ucmima
ucmima_SOURCES = dimensions.inc \
button.inc \
button.f \
buttqbr.f \
buttqcf.f \
buttqch.f \
buttqex.f \
buttqit.f \
buttqpr.f \
buttqxb.f \
buttqyb.f \
buttqytext.f \
buttsbr.f \
buttscf.f \
buttsch.f \
buttsex.f \
buttsit.f \
buttspr.f \
buttsxb.f \
buttsyb.f \
buttsytext.f \
fmean0.f \
fmedian1.f \
ifbutton.f \
iofunctions.f \
ordena1f.f \
rpgband.f \
rpgbegin.f \
rpgbegok.f \
rpgenv.f \
rpgeras.f \
rpgerasb.f \
rpgerasw.f \
systemfunction.f \
ucmima.f
